# alphadb

./:   .gitignore  .prettierrc  .prettierrc.yaml  AGENTS.md  CHANGELOG.md  Pipfile  README.md  VERIFICATION_NOTES.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  version.py
src/alphadb/: Cargo.toml  README.md  __init__.py  alphadb.py  mysql.py  postgres.py  sqlite.py  version_verification.py
src/alphadb/core/: Cargo.toml
src/alphadb/core/src/: engine.rs  engine_config.rs  lib.rs  method_types.rs  version_source_verification.rs
src/alphadb/core/src/methods/: mod.rs  update_queries.rs
src/alphadb/core/src/query/: build.rs  default_data.rs  mod.rs
src/alphadb/core/src/query/column/: definecolumn.rs  mod.rs  modifycolumn.rs
src/alphadb/core/src/query/table/: altertable.rs  createtable.rs  mod.rs
src/alphadb/core/src/utils/: check.rs  error_messages.rs  errors.rs  json.rs  mod.rs  types.rs  version_number.rs
src/alphadb/core/src/utils/consolidate/: column.rs  default_data.rs  primary_key.rs  table.rs  version_source.rs
src/alphadb/core/src/verification/: compatibility.rs  foreign_key.rs  index.rs  issue.rs  json.rs  mod.rs
src/alphadb/engines/mysql/: Cargo.toml  README.md
src/alphadb/engines/mysql/src/: lib.rs
src/alphadb/engines/mysql/src/methods/: connect.rs  init.rs  mod.rs  status.rs  update.rs  update_queries.rs  vacate.rs
src/alphadb/engines/mysql/src/query/: default_data.rs
src/alphadb/engines/mysql/src/utils/: check.rs  connection.rs  errors.rs
src/alphadb/engines/mysql/src/verification/: compatibility.rs  config.rs  mod.rs  verification.rs
src/alphadb/engines/postgres/: Cargo.toml  README.md
src/alphadb/engines/postgres/src/: lib.rs
src/alphadb/engines/postgres/src/methods/: connect.rs  init.rs  mod.rs  status.rs  update.rs  update_queries.rs  vacate.rs
src/alphadb/engines/postgres/src/query/: default_data.rs
src/alphadb/engines/postgres/src/utils/: check.rs  connection.rs  errors.rs
src/alphadb/engines/postgres/src/verification/: compatibility.rs  config.rs  mod.rs  verification.rs
src/alphadb/src/: alphadb.rs  core.rs  lib.rs  main.rs  prelude.rs  verification.rs  version_source_verification.rs
src/alphadb/src/core/: engine.rs  engine_config.rs  mod.rs  runtime_config.rs  update_queries.rs  version_source_verification.rs
src/alphadb/src/core/query/: build.rs  default_data.rs  mod.rs  primary_key.rs  table.rs
src/alphadb/src/core/query/column/: definecolumn.rs  mod.rs
src/alphadb/src/core/utils/: condition.rs  error_messages.rs  errors.rs  globals.rs  json.rs  mod.rs  types.rs  version_number.rs  version_source.rs
src/alphadb/src/core/utils/consolidate/: column.rs  default_data.rs  mod.rs  primary_key.rs  table.rs  version_source.rs
src/alphadb/src/core/verification/: compatibility.rs  foreign_key.rs  index.rs  issue.rs  json.rs  mod.rs  primary_key.rs
src/alphadb/src/engine/: mod.rs  mysql.rs  postgres.rs
src/alphadb/src/engine/mysql/methods/: connect.rs  init.rs  status.rs  update.rs  update_queries.rs  vacate.rs
src/alphadb/src/engine/mysql/utils/: connection.rs  mod.rs
src/alphadb/src/engine/mysql/verification/: config.rs  mod.rs
src/alphadb/src/engine/mysql_impl/: config.rs  mod.rs
src/alphadb/src/engine/mysql_impl/methods/: connect.rs  init.rs  mod.rs  status.rs  update.rs  update_queries.rs  vacate.rs
src/alphadb/src/engine/mysql_impl/query/: default_data.rs  mod.rs
src/alphadb/src/engine/mysql_impl/utils/: check.rs  connection.rs  errors.rs
src/alphadb/src/engine/postgres_impl/: config.rs  mod.rs
src/alphadb/src/methods/: connect.rs  init.rs  mod.rs  status.rs  update.rs  update_queries.rs  vacate.rs
src/alphadb/src/query/: default_data.rs  mod.rs
src/alphadb/src/query/column/: definecolumn.rs  mod.rs  modifycolumn.rs
src/alphadb/src/query/table/: altertable.rs  createtable.rs  mod.rs
src/alphadb/src/utils/: check.rs  error_messages.rs  errors.rs  helpers.rs  json.rs  mod.rs  types.rs  version_number.rs  version_source.rs
src/alphadb/src/utils/concatenate/: column.rs  mod.rs  primary_key.rs
src/alphadb/src/utils/consolidate/: column.rs  default_data.rs  mod.rs  primary_key.rs  table.rs  version_source.rs
src/alphadb/src/verification/: compatibility.rs  json.rs  mod.rs
src/alphadb/src/version_source/: combine.rs  mod.rs
src/alphadb/utils/: common.py  exceptions.py  globals.py  types.py
src/alphadb/utils/concatenate/: column.py  primary_key.py
src/alphadb/utils/query/: column.py  default_data.py  table.py
src/alphadb/utils/query/column/: addcolumn.py  definecolumn.py  modifycolumn.py
src/alphadb/utils/query/table/: altertable.py  createtable.py
src/alphadb/verification/: compatibility.py
src/cli/: 2  Cargo.toml  __init__.py  __main__.py  cli.py  commands.py
src/cli/src/: config.rs  dispatch.rs  engine_wrapper.rs  main.rs  parse.rs  utils.rs
src/cli/src/commands/: connect.rs  consolidate.rs  init.rs  mod.rs  status.rs  update.rs  vacate.rs  verify.rs
src/cli/src/config/: connection.rs  mod.rs  setup.rs  version_source.rs
src/cli/src/config/connection/: connection.rs  mod.rs  mysql.rs
src/cli/utils/: common.py  config.py  connect.py  decorators.py  globals.py  version_source.py
src/node/: .eslintrc.cjs  .npmignore  .prettierrc.yaml  Cargo.toml  README.md  alphadb.ts  index.js  index.ts  package-lock.json  package.json  package.postgres.json  pnpm-lock.yaml  postinstall.mjs  tsconfig.json  wrapper.py
src/node/crates/alphadb/: Cargo.toml
src/node/crates/alphadb/src/: engine.rs  lib.rs  types.rs  utils.rs
src/node/src/: index.cts  index.mts  lib.rs  load.cts  postinstall.mts
src/node/tests/: alphadb.test.js
src/py/: Cargo.toml  README.md  __init__.py  alphadb.pyi  pyproject.mysql.toml  pyproject.postgres.toml  pyproject.toml  requirements.txt
src/py/src/: lib.rs
src/py/tests/: test_alphadb.py
src/py/types/: alphadb.pyi
src/py/utils/: decorators.py  globals.py  types.py
src/py/utils/concatenate/: column.py  primary_key.py
src/py/utils/query/column/: addcolumn.py  definecolumn.py
src/py/utils/query/table/: createtable.py
(+138 files in other folders)
