[package]
name = "alphadb"
authors = ["Wibo Kuipers <wkuipersoss@gmail.com>"]
version = "1.0.0-dev16"
edition = "2021"
description = "AlphaDB is a versatile tool for managing MySQL database versions, using JSON to define structures and simplify migrations across environments. "
license = "GPL-3.0"
license-file = "LICENSE"
homepage = "https://alphadb.w-kuipers.com"
repository = "https://github.com/w-kuipers/alphadb"   
readme = "README.md"

[dependencies]
mysql = "25.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.64"
