[workspace]
members = [
    "core",
    "engines/mysql",
    "engines/postgres",
]

[package]
name = "alphadb"
authors = ["Wibo Kuipers <wkuipersoss@gmail.com>"]
version = "1.0.0-dev16"
edition = "2021"
description = "AlphaDB is a versatile tool for managing SQL database versions, using JSON to define structures and simplify migrations across environments. "
license = "GPL-3.0"
license-file = "LICENSE"
homepage = "https://alphadb.w-kuipers.com"
repository = "https://github.com/w-kuipers/alphadb"   
readme = "README.md"

[features]
default = []
mysql = ["dep:alphadb-mysql-engine"]
postgres = ["dep:alphadb-postgres-engine"]

[dependencies]
alphadb-core = { path = "core" }
alphadb-mysql-engine = { path = "engines/mysql", optional = true }
alphadb-postgres-engine = { path = "engines/postgres", optional = true }
mysql = "25.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
