[package]
name = "alphadb"
authors = ["Wibo Kuipers <wkuipersoss@gmail.com>"]
version = "1.0.0-dev16"
edition = "2021"
description = "AlphaDB is a versatile tool for managing SQL database versions, using JSON to define structures and simplify migrations across environments. "
license = "GPL-3.0"
license-file = "LICENSE"
homepage = "https://alphadb.w-kuipers.com"
repository = "https://github.com/w-kuipers/alphadb"   
readme = "README.md"

[features]
default = []
mysql = ["dep:mysql"]
postgres = ["dep:postgres"]
version-source = []

[dependencies]
mysql = { version = "25.0.1", optional = true }
postgres = { version = "0.19", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
thiserror = "1.0.64"
