[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
alphadb = { path = "../alphadb" }
inquire = "0.7.5"
colored = "2.1.0"
toml = "0.8.19"
serde = "1.0.210"
serde_derive = "1.0.210"
home = "0.5.9"
aes-gcm = "0.10.3"
rand_core = "0.6.4"
base64 = "0.22.1"
aead = "0.5.2"
aes = "0.8.4"
thiserror = "1.0.64"
serde_json = "1.0.133"
ctrlc = "3.4.5"
