[package]
name = "alphadb-cli"
version = "1.0.0-dev.132"
edition = "2021"
authors = ["Wibo Kuipers <wkuipersoss@gmail.com>"]
description = "AlphaDB is a versatile tool for managing MySQL database versions, using JSON to define structures and simplify migrations across environments. "
license = "GPL-3.0"
license-file = "LICENSE"
homepage = "https://alphadb.w-kuipers.com"
repository = "https://github.com/w-kuipers/alphadb"   
readme = "README.md"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
alphadb = { path = "../alphadb" }
inquire = "0.7.5"
colored = "2.1.0"
toml = "0.8.19"
serde = "1.0.210"
serde_derive = "1.0.210"
home = "0.5.9"
aes-gcm = "0.10.3"
rand_core = "0.6.4"
base64 = "0.22.1"
aead = "0.5.2"
aes = "0.8.4"
thiserror = "1.0.64"
serde_json = "1.0.133"
ctrlc = "3.4.5"
openssl = { version = "0.10.68", features = ["vendored"] }
chrono = "0.4.41"
