[package]
name = "alphadb-nodejs-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alphadb"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.94"
wasm-bindgen-cli = "0.2.94"
wasm-pack = "0.13.0"
