[package]
name = "alphadb"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alphadb"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.94"
wasm-bindgen-cli = "0.2.94"
alphadb = { path = "../alphadb" }
getrandom = { version = "0.2.15", features = ["js"] }
mysql = "25.0.1"
