[package]
name = "alphadb"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alphadb"
crate-type = ["cdylib"]
proc-macro = true

[dependencies]
wasm-bindgen = "0.2.94"
wasm-bindgen-cli = "0.2.94"
alphadb = { path = "../alphadb" }
getrandom = { version = "0.2.15", features = ["js"] }
mysql = "25.0.1"
openssl = { version = "0.10.68", features = ["vendored"] }
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.90"
