[package]
name = "alphadb-python-wrapper"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alphadb"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
alphadb = { path = "../alphadb" }
pyo3 = "0.23.3"
