[package]
name = "alphadb-python-wrapper"
version = "1.0.0"
edition = "2021"
description = "A powerful and flexible tool for MySQL database version management."
license = "GPL-3.0"
license-file = "LICENSE"
homepage = "https://alphadb.w-kuipers.com"
repository = "https://github.com/w-kuipers/alphadb"   
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "alphadb"
crate-type = ["cdylib"]

[dependencies]
mysql = { version = "25.0.1", optional = true }
postgres = { version = "0.19", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
alphadb = { path = "../alphadb", default-features = false }
pyo3 = "0.23.3"

[features]
default = []
mysql = ["dep:mysql", "alphadb/mysql"]
postgres = ["dep:postgres", "alphadb/postgres"]
