[package]
name = "alphadb-mysql-engine"
version = "1.0.0"
edition = "2021"

[lib]
name = "alphadb_mysql_engine"
path = "src/lib.rs"

[dependencies]
alphadb-core = { path = "../../core" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.64"
mysql = "25.0.1"
