[package]
name = "alphadb-node"
version = "23.0.22-dev.238-node"
authors = ["Wibo Kuipers"]
license = "GPL-3.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
alphadb = { path = "/home/wibo/code/alphadb/alphadb/src/alphadb", default-features = false }
mysql = { version = "25.0.1", optional = true }
postgres = { version = "0.19", optional = true }

[features]
default = []
mysql = ["dep:mysql", "alphadb/mysql"]
postgres = ["dep:postgres", "alphadb/postgres"]
